# workspace-mcp-gateway

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  spec.md
.claude/: settings.json
docs/: deployment-runbook.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_client_tokens.py
scripts/: setup-nginx.sh  setup_local_db.sh
src/gateway/: __init__.py  app.py  config.py  logging.py  tokens.py
src/gateway/audit/: log.py
src/gateway/crypto/: tokens.py
src/gateway/db/: base.py  engine.py  models.py
src/gateway/identity/: models.py  resolver.py
src/gateway/mcp/: context.py  server.py
src/gateway/oauth/: google.py  routes.py
src/gateway/policy/: confirm.py
src/gateway/providers/: base.py  registry.py
src/gateway/providers/google/: client.py  connections.py
src/gateway/providers/google/calendar/: common.py  read.py  write.py
src/gateway/providers/google/tasks/: __init__.py  common.py  read.py  write.py
src/gateway/providers/system/: __init__.py  time.py
tests/: test_calendar_read.py  test_calendar_write.py  test_db_integration.py  test_identity.py  test_mcp_product_endpoints.py  test_oauth_google.py  test_policy_and_audit.py  test_registry_connect_result.py  test_registry_pipeline.py  test_system_time.py  test_tasks_read.py  test_tasks_write.py
