[project]
name = "workspace-mcp-gateway"
version = "0.1.0"
description = "Multi-user MCP gateway for Open WebUI (Google Workspace provider)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "mcp>=1.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "google-api-python-client>=2.150",
    "google-auth>=2.35",
    "google-auth-oauthlib>=1.2",
    "cryptography>=43",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
packages = ["gateway"]
mypy_path = "src"
ignore_missing_imports = true
